--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
-html body {
-  font-family: Arial, Helvetica, sans-serif;
-  height: 0;
-  width: 0;
-  margin-top: 0;
+#root {
+  display: flex;
+  justify-content: center;
+  top: 10%;
 }
-
 .main-body {
+  font-family: Arial, Helvetica, sans-serif;
   background: linear-gradient(to right, #2193b0, #6dd5ed);
+  margin: 0%;
+  margin-top: 0;
   height: 100vh;
   width: 100vw;
 }
